更正错误代码

--- a/orderform.html
+++ b/orderform.html
@@ -2,7 +2,7 @@
     <table border="0">
         <tr bgcolor="#cccccc">
             <td width="150">Item</td>
-            <td width="15">Quanyiyt</td>
+            <td width="15">Quantity</td>
         </tr>
         <tr>
             <td>Tires</td>
