订单地址替换广告推荐

--- a/orderform.html
+++ b/orderform.html
@@ -24,13 +24,9 @@
         </tr>
 
         <tr>
-            <td>How did you find Bob 's?</td>
-            <td><select name="find">
-                 <option value="a">I 'm a regular customer</option>
-                 <option value="b">TV advertising</option>
-                 <option value="c">Phone directory</option>
-                 <option value="d">Word of mouth</option>
-                </select>
+            <td>Shipping Address</td>
+            <td align="center">
+                <input type="text" name="address" size="10" maxlength="10" />
             </td>
         </tr>
         <tr>
