修改orderform文件，processorder.php为最终订单处理脚本

--- a/orderform.html
+++ b/orderform.html
@@ -1,38 +1,52 @@
-<form action="processorder.php" method="post">
-    <table border="0">
-        <tr bgcolor="#cccccc">
-            <td width="150">Item</td>
-            <td width="15">Quantity</td>
-        </tr>
-        <tr>
-            <td>Tires</td>
-            <td align="center">
-                <input type="text" name="tireqty" size="3" maxlength="3" />
-            </td>
-        </tr>
-        <tr>
-            <td>Oil</td>
-            <td align="center">
-                <input type="text" name="oilqty" size="3" maxlength="3" />
-            </td>
-        </tr>
-        <tr>
-            <td>Spark plugs</td>
-            <td align="center">
-                <input type="text" name="sparkqty" size="3" maxlength="3" />
-            </td>
-        </tr>
+<html>
 
-        <tr>
-            <td>Shipping Address</td>
-            <td align="center">
-                <input type="text" name="address" size="10" maxlength="10" />
-            </td>
-        </tr>
-        <tr>
-            <td colspan="2" align="center">
-                <input type="submit" value="Submit Order" />
-            </td>
-        </tr>
-    </table>
-</form>
+<head>
+    <title>Bob's Auto Parts</title>
+</head>
+
+<body>
+    <h1>Bob's Auto Parts</h1>
+    <h2>Order Form</h2>
+    <form action="processorder.php" method="post">
+        <table border="0">
+            <tr bgcolor="#cccccc">
+                <td width="150">Item</td>
+                <td width="300">Quantity</td>
+            </tr>
+            <tr>
+                <td>Tires</td>
+                <td>
+                    <input type="text" name="tireqty" size="5" maxlength="5" />
+                </td>
+            </tr>
+            <tr>
+                <td>Oil</td>
+                <td>
+                    <input type="text" name="oilqty" size="5" maxlength="5" />
+                </td>
+            </tr>
+            <tr>
+                <td>Spark plugs</td>
+                <td>
+                    <input type="text" name="sparkqty" size="5" maxlength="5" />
+                </td>
+            </tr>
+
+            <tr>
+                <td>Shipping Address</td>
+                <td>
+                    <input type="text" name="address" size="50" maxlength="50" />
+                </td>
+            </tr>
+            <tr>
+                <td></td>
+                <td>
+                    <input type="submit" value="Submit Order" />
+                </td>
+            </tr>
+        </table>
+    </form>
+
+</body>
+
+</html>
